package sys.stamp;
import "sys/stamp/Person.proto";
import "monad/rpc/protocol/command.proto";

option java_package = "nirvana.hall.protocol.sys.stamp";

option java_outer_classname = "QueryBasePersonProto";

//人员基本查询
message QueryBasePersonRequest {
    extend monad.rpc.protocol.BaseCommand {
        optional QueryBasePersonRequest cmd = 10209;
    }
    optional string personid = 1;
}

message QueryBasePersonResponse {
    extend monad.rpc.protocol.BaseCommand {
        optional QueryBasePersonResponse cmd = 10210;
    }
    repeated PersonInfo personInfo = 1;

}